--- a/style.css
+++ b/style.css
@@ -80,7 +80,10 @@
   height: 720px;
 }
 .wrap h1 {
-  margin: 15px;
+  margin: 0;
+  padding: 7px 15px 8px;
+  background: #333;
+  color: #f6f6f6;
 }
 
 .block {
