--- a/style.scss
+++ b/style.scss
@@ -9,7 +9,10 @@
   border: 1px solid #333;
   height: 720px;
   h1 {
-    margin: 15px;
+    margin: 0;
+    padding: 7px 15px 8px;
+    background: #333;
+    color: #f6f6f6;
   }
 }
 .block {
