--- a/style.scss
+++ b/style.scss
@@ -8,11 +8,27 @@
   margin: 30px auto;
   border: 1px solid #333;
   height: 720px;
-  h1 {
+  .page_title {
     margin: 0;
     padding: 7px 15px 8px;
+    overflow: hidden;
     background: #333;
-    color: #f6f6f6;
+    h1 {
+      margin: 0;
+      color: #f6f6f6;
+      float: left;
+    }
+    .github {
+      margin: 0;
+      padding: 6px 0;
+      float: right;
+      color: #f6f6f6;
+      line-height: 24px;
+      font-size: 24px;
+      &:hover {
+        opacity: .8;
+      }
+    }
   }
 }
 .block {
