update inline-block styles

--- a/parts/_sample_inline-block.scss
+++ b/parts/_sample_inline-block.scss
@@ -6,7 +6,7 @@
     overflow-x: auto;
     overflow-y: hidden;
     white-space: nowrap;
-    background: #ccc;
+    font-size: 0;
     &::-webkit-scrollbar {
       display: none;
     }
@@ -24,6 +24,7 @@
         padding: 10px 20px;
         text-decoration: none;
         color: #444;
+        font-size: 15px;
       }
     }
   }
