--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@
   overflow-x: auto;
   overflow-y: hidden;
   white-space: nowrap;
-  background: #ccc;
+  font-size: 0;
 }
 #sample_inline-block .gnav::-webkit-scrollbar {
   display: none;
@@ -71,6 +71,7 @@
   padding: 10px 20px;
   text-decoration: none;
   color: #444;
+  font-size: 15px;
 }
 
 .wrap {
@@ -114,6 +115,7 @@
   padding: 0 15px;
 }
 .block .gnav {
+  margin: 15px 0;
   padding: 0;
 }
 .block .item {
